Don't leak QVistaHelper from QWizard

The default QObject constructor was not called, meaning the vista helper
was never registered as a child of the QWizard (and therefore never
deleted when the QWizard was destructed).

Task-number: QTBUG-10203
Reviewed-by: olivier
(cherry picked from commit 6bc32600d2367e78ddc39dd93694e01d4d75958d)